--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -25,6 +25,24 @@ $breakpoint-med: 950px;
     background-clip: padding-box;
 }
 
+/* Media query, ... means the function can take an undefined amount of arguments. They can later be accessed with nth() function.
+If statement checks how many args are passed, to adjust the media query */
+@mixin mQ($args...) {
+    @if length($args) == 1 {
+    @media screen and (min-width: nth($args, 1)) {
+        @content;
+    }
+
+    @if length($args) == 2 {
+        @media screen and (min-width: nth($args, 1)) and (max-width: nth($args, 2)) {
+            @content;
+        }
+    }
+}
+
+
+}
+
 /* ---- Imports */
 @import 'reset';
 
@@ -52,6 +70,11 @@ h1 {
     color: $white;
     margin-bottom: 10px;
     padding: 0 10px;
+    @include mQ(400px){
+        font-size: 40px;
+        color: $white;
+        margin-bottom: 10px;
+    }
 }
 
 h2 {
@@ -91,6 +114,20 @@ p {
     text-align: center;
     max-width: 400px;
     margin: 0 auto;
+    @include mQ(950px, 600px){
+        max-width: 400px;
+        margin: 0 auto;
+        margin-top: 100px;
+    }
+    @include mQ(950px){
+        max-width: 9999px;
+        position: fixed; 
+        top: 50%;
+        left: 50%;
+        margin-top: -200px;
+        margin-left: -450px;
+        text-align: left;
+    }
 }
 
 #link-buttons li {
@@ -103,6 +140,14 @@ p {
     height: 130px;
     margin: 25px auto;
     @include border-radius(10px);
+    @include mQ(600px) {
+        display: inline-block;
+        margin: 10px;
+    }
+    @include mQ(950px){
+        margin: 5px;
+        text-align: center;
+    }
 
     a {
         text-decoration: none;
@@ -128,6 +173,9 @@ p {
     padding: 20px;
     max-width: 200px;
     margin: 0 auto;
+    @include mQ(600px){
+        max-width: 9999px;
+    }
 
     ul li {
 
@@ -165,6 +213,11 @@ p {
         height: auto;
         display: block;
         @include border-radius(0);
+        @include mQ(600px){
+            display: inline-block;
+            position: relative;
+            top: 20px;
+        }
 
         a {
             color: $white;
@@ -181,11 +234,26 @@ p {
 #purpose {
     background-color: $yellow;
     padding: 20px;
+    @include mQ(600px){
+        padding: 40px;
+    }
 
     ul {
         list-style: disc;
         margin-left: 5px;
         max-width: 100%;
+        @include mQ(600px){
+            margin-left: 40px;
+        }
+    }
+
+    ol {
+        list-style: decimal;
+        margin-left: 5px;
+        max-width: 100%;
+        @include mQ(600px){
+            margin-left: 40px;
+        }
     }
 
     li {
@@ -197,17 +265,26 @@ p {
 #steps {
     background-color: $white;
     padding: 20px;
+    @include mQ(600px){
+        padding: 40px;
+    }
 
     ul {
         list-style: disc;
         margin-left: 5px;
         max-width: 100%;
+        @include mQ(600px){
+            margin-left: 40px;
+        }
     }
 
     ol {
         list-style: decimal;
         margin-left: 5px;
         max-width: 100%;
+        @include mQ(600px){
+            margin-left: 40px;
+        }
     }
 
     li {
@@ -220,11 +297,26 @@ p {
     background-color: $grey;
     padding: 20px;
     margin-bottom: 50px;
+    @include mQ(600px){
+        padding: 40px;
+    }
 
     ul {
         list-style: disc;
         margin-left: 5px;
         max-width: 100%;
+        @include mQ(600px){
+            margin-left: 40px;
+        }
+    }
+
+    ol {
+        list-style: decimal;
+        margin-left: 5px;
+        max-width: 100%;
+        @include mQ(600px){
+            margin-left: 40px;
+        }
     }
 
     li {
@@ -241,107 +333,8 @@ p {
 .check {
     width: 50px;
     float: right;
-}
-
-/* Media queries */
-
-@media screen and (min-width: 400px) {
-
-    /* Heading */
-
-    h1 {
-        font-size: 40px;
-        color: $white;
-        margin-bottom: 10px;
-    }    
-
-}
-
-@media screen and (min-width: 600px) {
-
-    /* Home page buttons */
-
-    #home-page-menu {
-        max-width: 400px;
-        margin: 0 auto;
-        margin-top: 100px;
-    }
-
-    #link-buttons li {
-        display: inline-block;
-        margin: 10px;
-    }
-
-    /* Header menu */
-
-    #mainheader {
-        max-width: 9999px;
-
-        ul li:first-of-type {
-            display: inline-block;
-            position: relative;
-            top: 20px;
-        }
-    }
-
-    #purpose {
-        padding: 40px;
-
-        ul {
-            margin-left: 40px;
-        }
-
-        ol {
-            margin-left: 40px;
-        }
-    }
-
-    #steps {
-        padding: 40px;
-
-        ul {
-            margin-left: 40px;
-        }
-
-        ol {
-            margin-left: 40px;
-        }
-    }
-
-    #hand-in {
-        padding: 40px;
-
-        ul {
-            margin-left: 40px;
-        }
-
-        ol {
-            margin-left: 40px;
-        }
-    }
-
-    .check {
+    @include mQ(600px){
         width: 75px;
         float: right;
     }
-}
-
-@media screen and (min-width: 950px) {
-
-    #home-page-menu {
-        max-width: 9999px;
-        position: fixed; 
-        top: 50%;
-        left: 50%;
-        margin-top: -200px;
-        margin-left: -450px;
-        text-align: left;
-    }
-
-    #link-buttons li {
-        display: inline-block;
-        margin: 5px;
-        text-align: center;
-    }
-
 }
